# QQDeBreath-ARA-VST3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION_ARA_1_07.txt  VERSION_ARA_1_09.txt  VERSION_ARA_1_10.txt  VERSION_ARA_1_11.txt  VERSION_ARA_1_12.txt  VERSION_ARA_1_13.txt  VERSION_ARA_1_14.txt  VERSION_ARA_1_15.txt  build-ara-vst3.ps1  build-bridge.ps1
.github/workflows/: build-vst3.yml
bridge/src/: main.cpp
docs/: QQDeBreath-macOS-1.12-INSTALL.txt  QQDeBreath-macOS-1.13-INSTALL-ZH-CN.txt  QQDeBreath-macOS-1.13-INSTALL.txt  QQDeBreath-macOS-1.14-INSTALL-ZH-CN.txt  QQDeBreath-macOS-1.14-INSTALL.txt  QQDeBreath-macOS-1.15-INSTALL-ZH-CN.txt  QQDeBreath-macOS-1.15-INSTALL.txt  ara_1_01_release.md  ara_1_02_release.md  ara_1_03_release.md  ara_1_04_release.md  ara_1_05_release.md  ara_1_06_release.md  ara_1_07_release.md  ara_1_09_release.md  ara_1_10_release.md  ara_1_11_release.md  ara_1_12_au_release.md  ara_1_12_release.md  ara_1_13_release.md  ara_1_14_release.md  ara_1_15_release.md  ara_demo_build.md  build_windows.md  phase6a_ara_target.md  phase6b_vst3_recording.md  phase7a_bridge.md
native_probe/src/: main.cpp
src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h
src/ara/: ARAEditor.cpp  ARAEditor.h  ARAProcessor.cpp  ARAProcessor.h
src/shared/: BreathEq.cpp  BreathEq.h  BreathEqComponent.cpp  BreathEqComponent.h  BridgeAnalysis.cpp  BridgeAnalysis.h  NativeAnalysis.cpp  NativeAnalysis.h  NativeBreathModelData.h  NativeFilterData.h  WaveformEditorComponent.cpp  WaveformEditorComponent.h
tests/: EditorStateProbe.cpp
